# backend_mentors_extension

./: .gitignore  Dockerfile  README.md  authorization.py  dependencies.py  get_study_days.py  main.py  mentors.py  plans.py  pyproject.toml  settings.py
.github/workflows/: ci.yml
