[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["neverdieone <altiore@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.0"}
telethon = "^1.27.0"
environs = "^9.5.0"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
requests = "^2.28.2"
bs4 = "^0.0.1"
lxml = "^4.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
